--- a/TODO
+++ b/TODO
@@ -29,7 +29,12 @@ db
     Add, delete, update, get
 
 
-
+Today task
+1) fix bag Tap, Status ✅
+2) Savol javob
+3) Referral  ✅
+4) Filter top   ✅
+5) Daraja update ✅
 
 
 
