--- a/TODO
+++ b/TODO
@@ -31,7 +31,7 @@ db
 
 Today task
 1) fix bag Tap, Status ✅
-2) Savol javob
+2) Savol javob  ✅
 3) Referral  ✅
 4) Filter top   ✅
 5) Daraja update ✅
